--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,11 @@
             "src/helpers.php"
         ]
     },
-    "minimum-stability": "dev"
+    "extra": {
+        "laravel": {
+            "providers": [
+                "bvtvd\\CaptchaLumen\\CaptchaServiceProvider"
+            ]
+        }
+    }
 }
